150050020-150070004/parser.out
Created by PLY version 3.7 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> basic_block program
Rule 2     program -> basic_block
Rule 3     basic_block -> declaration
Rule 4     basic_block -> fn_declaration
Rule 5     basic_block -> fn_definition
Rule 6     fn_declaration -> type fn_name LPAREN dec_arg_list RPAREN SEMICOLON
Rule 7     fn_declaration -> type fn_name LPAREN arg_list RPAREN SEMICOLON
Rule 8     fn_declaration -> VOID fn_name LPAREN dec_arg_list RPAREN SEMICOLON
Rule 9     fn_declaration -> VOID fn_name LPAREN arg_list RPAREN SEMICOLON
Rule 10    fn_definition -> fn_defn1 fn_defn2
Rule 11    fn_defn1 -> type fn_name LPAREN arg_list RPAREN
Rule 12    fn_defn1 -> VOID fn_name LPAREN arg_list RPAREN
Rule 13    fn_defn2 -> LCURVE fn_body RCURVE
Rule 14    fn_name -> star MAIN
Rule 15    fn_name -> variable
Rule 16    star -> STAR star
Rule 17    star -> <empty>
Rule 18    fn_body -> fn_line fn_body
Rule 19    fn_body -> <empty>
Rule 20    fn_line -> declaration
Rule 21    fn_line -> stmt
Rule 22    fn_line -> fn_call SEMICOLON
Rule 23    return_stmt -> RETURN E1 SEMICOLON
Rule 24    return_stmt -> RETURN SEMICOLON
Rule 25    fn_call -> IDENTIFIER LPAREN fn_call_args RPAREN
Rule 26    fn_call_args -> E1 fn_call_args_list
Rule 27    fn_call_args -> <empty>
Rule 28    fn_call_args_list -> COMMA E1 fn_call_args_list
Rule 29    fn_call_args_list -> <empty>
Rule 30    type -> INT_VAR
Rule 31    type -> FLOAT_VAR
Rule 32    dec_arg_list -> type star dec_multiple_arg
Rule 33    dec_multiple_arg -> COMMA type star dec_multiple_arg
Rule 34    dec_multiple_arg -> <empty>
Rule 35    arg_list -> type variable multiple_arg
Rule 36    arg_list -> <empty>
Rule 37    multiple_arg -> COMMA type variable multiple_arg
Rule 38    multiple_arg -> <empty>
Rule 39    declaration -> type list SEMICOLON
Rule 40    list -> list COMMA variable
Rule 41    list -> variable
Rule 42    variable -> IDENTIFIER
Rule 43    variable -> STAR variable
Rule 44    stmt -> matched_stmt
Rule 45    stmt -> unmatched_stmt
Rule 46    matched_stmt -> IF LPAREN condition RPAREN matched_stmt ELSE matched_stmt
Rule 47    matched_stmt -> IF LPAREN condition RPAREN matched_stmt ELSE SEMICOLON
Rule 48    matched_stmt -> IF LPAREN condition RPAREN SEMICOLON ELSE SEMICOLON
Rule 49    matched_stmt -> IF LPAREN condition RPAREN SEMICOLON ELSE matched_stmt
Rule 50    matched_stmt -> LCURVE stmt_list RCURVE
Rule 51    matched_stmt -> expr
Rule 52    matched_stmt -> return_stmt
Rule 53    matched_stmt -> WHILE LPAREN condition RPAREN matched_stmt
Rule 54    matched_stmt -> WHILE LPAREN condition RPAREN SEMICOLON
Rule 55    unmatched_stmt -> IF LPAREN condition RPAREN stmt
Rule 56    unmatched_stmt -> IF LPAREN condition RPAREN SEMICOLON
Rule 57    unmatched_stmt -> IF LPAREN condition RPAREN matched_stmt ELSE unmatched_stmt
Rule 58    unmatched_stmt -> IF LPAREN condition RPAREN SEMICOLON ELSE unmatched_stmt
Rule 59    unmatched_stmt -> WHILE LPAREN condition RPAREN unmatched_stmt
Rule 60    stmt_list -> stmt stmt_list
Rule 61    stmt_list -> stmt
Rule 62    condition -> condition AND condition
Rule 63    condition -> condition OR condition
Rule 64    condition -> E1 OPERATOR E1
Rule 65    condition -> LPAREN condition RPAREN
Rule 66    condition -> NOT condition
Rule 67    expr -> id EQUALS E1 SEMICOLON
Rule 68    expr -> STAR left_side EQUALS E1 SEMICOLON
Rule 69    left_side -> id
Rule 70    left_side -> star_ampersand id
Rule 71    E1 -> E1 PLUS E2
Rule 72    E1 -> E1 MINUS E2
Rule 73    E1 -> E2
Rule 74    E2 -> E2 STAR E3
Rule 75    E2 -> E2 DIVIDE E3
Rule 76    E2 -> E3
Rule 77    E3 -> LPAREN E1 RPAREN
Rule 78    E3 -> mixed_id
Rule 79    mixed_id -> star_ampersand id
Rule 80    mixed_id -> id
Rule 81    mixed_id -> MINUS mixed_id
Rule 82    mixed_id -> INT
Rule 83    mixed_id -> FLOAT
Rule 84    mixed_id -> fn_call
Rule 85    mixed_id -> star_ampersand fn_call
Rule 86    star_ampersand -> STAR star_ampersand
Rule 87    star_ampersand -> STAR
Rule 88    star_ampersand -> AMPERSAND
Rule 89    id -> IDENTIFIER

Terminals, with rules where they appear

AMPERSAND            : 88
AND                  : 62
COMMA                : 28 33 37 40
DIVIDE               : 75
ELSE                 : 46 47 48 49 57 58
EQUALS               : 67 68
FLOAT                : 83
FLOAT_VAR            : 31
IDENTIFIER           : 25 42 89
IF                   : 46 47 48 49 55 56 57 58
INT                  : 82
INT_VAR              : 30
LCURVE               : 13 50
LPAREN               : 6 7 8 9 11 12 25 46 47 48 49 53 54 55 56 57 58 59 65 77
MAIN                 : 14
MINUS                : 72 81
NOT                  : 66
OPERATOR             : 64
OR                   : 63
PLUS                 : 71
RCURVE               : 13 50
RETURN               : 23 24
RPAREN               : 6 7 8 9 11 12 25 46 47 48 49 53 54 55 56 57 58 59 65 77
SEMICOLON            : 6 7 8 9 22 23 24 39 47 48 48 49 54 56 58 67 68
STAR                 : 16 43 68 74 86 87
VOID                 : 8 9 12
WHILE                : 53 54 59
error                : 

Nonterminals, with rules where they appear

E1                   : 23 26 28 64 64 67 68 71 72 77
E2                   : 71 72 73 74 75
E3                   : 74 75 76
arg_list             : 7 9 11 12
basic_block          : 1 2
condition            : 46 47 48 49 53 54 55 56 57 58 59 62 62 63 63 65 66
dec_arg_list         : 6 8
dec_multiple_arg     : 32 33
declaration          : 3 20
expr                 : 51
fn_body              : 13 18
fn_call              : 22 84 85
fn_call_args         : 25
fn_call_args_list    : 26 28
fn_declaration       : 4
fn_definition        : 5
fn_defn1             : 10
fn_defn2             : 10
fn_line              : 18
fn_name              : 6 7 8 9 11 12
id                   : 67 69 70 79 80
left_side            : 68
list                 : 39 40
matched_stmt         : 44 46 46 47 49 53 57
mixed_id             : 78 81
multiple_arg         : 35 37
program              : 1 0
return_stmt          : 52
star                 : 14 16 32 33
star_ampersand       : 70 79 85 86
stmt                 : 21 55 60 61
stmt_list            : 50 60
type                 : 6 7 11 32 33 35 37 39
unmatched_stmt       : 45 57 58 59
variable             : 15 35 37 40 41 43

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . basic_block program
    (2) program -> . basic_block
    (3) basic_block -> . declaration
    (4) basic_block -> . fn_declaration
    (5) basic_block -> . fn_definition
    (39) declaration -> . type list SEMICOLON
    (6) fn_declaration -> . type fn_name LPAREN dec_arg_list RPAREN SEMICOLON
    (7) fn_declaration -> . type fn_name LPAREN arg_list RPAREN SEMICOLON
    (8) fn_declaration -> . VOID fn_name LPAREN dec_arg_list RPAREN SEMICOLON
    (9) fn_declaration -> . VOID fn_name LPAREN arg_list RPAREN SEMICOLON
    (10) fn_definition -> . fn_defn1 fn_defn2
    (30) type -> . INT_VAR
    (31) type -> . FLOAT_VAR
    (11) fn_defn1 -> . type fn_name LPAREN arg_list RPAREN
    (12) fn_defn1 -> . VOID fn_name LPAREN arg_list RPAREN

    VOID            shift and go to state 4
    INT_VAR         shift and go to state 7
    FLOAT_VAR       shift and go to state 10

    program                        shift and go to state 1
    type                           shift and go to state 2
    declaration                    shift and go to state 3
    fn_definition                  shift and go to state 5
    fn_declaration                 shift and go to state 6
    fn_defn1                       shift and go to state 8
    basic_block                    shift and go to state 9

state 1

    (0) S' -> program .



state 2

    (39) declaration -> type . list SEMICOLON
    (6) fn_declaration -> type . fn_name LPAREN dec_arg_list RPAREN SEMICOLON
    (7) fn_declaration -> type . fn_name LPAREN arg_list RPAREN SEMICOLON
    (11) fn_defn1 -> type . fn_name LPAREN arg_list RPAREN
    (40) list -> . list COMMA variable
    (41) list -> . variable
    (14) fn_name -> . star MAIN
    (15) fn_name -> . variable
    (42) variable -> . IDENTIFIER
    (43) variable -> . STAR variable
    (16) star -> . STAR star
    (17) star -> .

    IDENTIFIER      shift and go to state 14
    STAR            shift and go to state 12
    MAIN            reduce using rule 17 (star -> .)

    list                           shift and go to state 11
    fn_name                        shift and go to state 16
    variable                       shift and go to state 15
    star                           shift and go to state 13

state 3

    (3) basic_block -> declaration .

    VOID            reduce using rule 3 (basic_block -> declaration .)
    INT_VAR         reduce using rule 3 (basic_block -> declaration .)
    FLOAT_VAR       reduce using rule 3 (basic_block -> declaration .)
    $end            reduce using rule 3 (basic_block -> declaration .)


state 4

    (8) fn_declaration -> VOID . fn_name LPAREN dec_arg_list RPAREN SEMICOLON
    (9) fn_declaration -> VOID . fn_name LPAREN arg_list RPAREN SEMICOLON
    (12) fn_defn1 -> VOID . fn_name LPAREN arg_list RPAREN
    (14) fn_name -> . star MAIN
    (15) fn_name -> . variable
    (16) star -> . STAR star
    (17) star -> .
    (42) variable -> . IDENTIFIER
    (43) variable -> . STAR variable

    STAR            shift and go to state 17
    MAIN            reduce using rule 17 (star -> .)
    IDENTIFIER      shift and go to state 14

    fn_name                        shift and go to state 19
    variable                       shift and go to state 18
    star                           shift and go to state 13

state 5

    (5) basic_block -> fn_definition .

    VOID            reduce using rule 5 (basic_block -> fn_definition .)
    INT_VAR         reduce using rule 5 (basic_block -> fn_definition .)
    FLOAT_VAR       reduce using rule 5 (basic_block -> fn_definition .)
    $end            reduce using rule 5 (basic_block -> fn_definition .)


state 6

    (4) basic_block -> fn_declaration .

    VOID            reduce using rule 4 (basic_block -> fn_declaration .)
    INT_VAR         reduce using rule 4 (basic_block -> fn_declaration .)
    FLOAT_VAR       reduce using rule 4 (basic_block -> fn_declaration .)
    $end            reduce using rule 4 (basic_block -> fn_declaration .)


state 7

    (30) type -> INT_VAR .

    IDENTIFIER      reduce using rule 30 (type -> INT_VAR .)
    STAR            reduce using rule 30 (type -> INT_VAR .)
    COMMA           reduce using rule 30 (type -> INT_VAR .)
    RPAREN          reduce using rule 30 (type -> INT_VAR .)
    MAIN            reduce using rule 30 (type -> INT_VAR .)


state 8

    (10) fn_definition -> fn_defn1 . fn_defn2
    (13) fn_defn2 -> . LCURVE fn_body RCURVE

    LCURVE          shift and go to state 21

    fn_defn2                       shift and go to state 20

state 9

    (1) program -> basic_block . program
    (2) program -> basic_block .
    (1) program -> . basic_block program
    (2) program -> . basic_block
    (3) basic_block -> . declaration
    (4) basic_block -> . fn_declaration
    (5) basic_block -> . fn_definition
    (39) declaration -> . type list SEMICOLON
    (6) fn_declaration -> . type fn_name LPAREN dec_arg_list RPAREN SEMICOLON
    (7) fn_declaration -> . type fn_name LPAREN arg_list RPAREN SEMICOLON
    (8) fn_declaration -> . VOID fn_name LPAREN dec_arg_list RPAREN SEMICOLON
    (9) fn_declaration -> . VOID fn_name LPAREN arg_list RPAREN SEMICOLON
    (10) fn_definition -> . fn_defn1 fn_defn2
    (30) type -> . INT_VAR
    (31) type -> . FLOAT_VAR
    (11) fn_defn1 -> . type fn_name LPAREN arg_list RPAREN
    (12) fn_defn1 -> . VOID fn_name LPAREN arg_list RPAREN

    $end            reduce using rule 2 (program -> basic_block .)
    VOID            shift and go to state 4
    INT_VAR         shift and go to state 7
    FLOAT_VAR       shift and go to state 10

    program                        shift and go to state 22
    type                           shift and go to state 2
    declaration                    shift and go to state 3
    fn_definition                  shift and go to state 5
    fn_declaration                 shift and go to state 6
    fn_defn1                       shift and go to state 8
    basic_block                    shift and go to state 9

state 10

    (31) type -> FLOAT_VAR .

    IDENTIFIER      reduce using rule 31 (type -> FLOAT_VAR .)
    STAR            reduce using rule 31 (type -> FLOAT_VAR .)
    COMMA           reduce using rule 31 (type -> FLOAT_VAR .)
    RPAREN          reduce using rule 31 (type -> FLOAT_VAR .)
    MAIN            reduce using rule 31 (type -> FLOAT_VAR .)


state 11

    (39) declaration -> type list . SEMICOLON
    (40) list -> list . COMMA variable

    SEMICOLON       shift and go to state 23
    COMMA           shift and go to state 24


state 12

    (43) variable -> STAR . variable
    (16) star -> STAR . star
    (42) variable -> . IDENTIFIER
    (43) variable -> . STAR variable
    (16) star -> . STAR star
    (17) star -> .

    IDENTIFIER      shift and go to state 14
    STAR            shift and go to state 12
    MAIN            reduce using rule 17 (star -> .)

    star                           shift and go to state 25
    variable                       shift and go to state 26

state 13

    (14) fn_name -> star . MAIN

    MAIN            shift and go to state 27


state 14

    (42) variable -> IDENTIFIER .

    SEMICOLON       reduce using rule 42 (variable -> IDENTIFIER .)
    COMMA           reduce using rule 42 (variable -> IDENTIFIER .)
    LPAREN          reduce using rule 42 (variable -> IDENTIFIER .)
    RPAREN          reduce using rule 42 (variable -> IDENTIFIER .)


state 15

    (41) list -> variable .
    (15) fn_name -> variable .

    SEMICOLON       reduce using rule 41 (list -> variable .)
    COMMA           reduce using rule 41 (list -> variable .)
    LPAREN          reduce using rule 15 (fn_name -> variable .)


state 16

    (6) fn_declaration -> type fn_name . LPAREN dec_arg_list RPAREN SEMICOLON
    (7) fn_declaration -> type fn_name . LPAREN arg_list RPAREN SEMICOLON
    (11) fn_defn1 -> type fn_name . LPAREN arg_list RPAREN

    LPAREN          shift and go to state 28


state 17

    (16) star -> STAR . star
    (43) variable -> STAR . variable
    (16) star -> . STAR star
    (17) star -> .
    (42) variable -> . IDENTIFIER
    (43) variable -> . STAR variable

    STAR            shift and go to state 17
    MAIN            reduce using rule 17 (star -> .)
    COMMA           reduce using rule 17 (star -> .)
    RPAREN          reduce using rule 17 (star -> .)
    IDENTIFIER      shift and go to state 14

    star                           shift and go to state 25
    variable                       shift and go to state 26

state 18

    (15) fn_name -> variable .

    LPAREN          reduce using rule 15 (fn_name -> variable .)


state 19

    (8) fn_declaration -> VOID fn_name . LPAREN dec_arg_list RPAREN SEMICOLON
    (9) fn_declaration -> VOID fn_name . LPAREN arg_list RPAREN SEMICOLON
    (12) fn_defn1 -> VOID fn_name . LPAREN arg_list RPAREN

    LPAREN          shift and go to state 29


state 20

    (10) fn_definition -> fn_defn1 fn_defn2 .

    VOID            reduce using rule 10 (fn_definition -> fn_defn1 fn_defn2 .)
    INT_VAR         reduce using rule 10 (fn_definition -> fn_defn1 fn_defn2 .)
    FLOAT_VAR       reduce using rule 10 (fn_definition -> fn_defn1 fn_defn2 .)
    $end            reduce using rule 10 (fn_definition -> fn_defn1 fn_defn2 .)


state 21

    (13) fn_defn2 -> LCURVE . fn_body RCURVE
    (18) fn_body -> . fn_line fn_body
    (19) fn_body -> .
    (20) fn_line -> . declaration
    (21) fn_line -> . stmt
    (22) fn_line -> . fn_call SEMICOLON
    (39) declaration -> . type list SEMICOLON
    (44) stmt -> . matched_stmt
    (45) stmt -> . unmatched_stmt
    (25) fn_call -> . IDENTIFIER LPAREN fn_call_args RPAREN
    (30) type -> . INT_VAR
    (31) type -> . FLOAT_VAR
    (46) matched_stmt -> . IF LPAREN condition RPAREN matched_stmt ELSE matched_stmt
    (47) matched_stmt -> . IF LPAREN condition RPAREN matched_stmt ELSE SEMICOLON
    (48) matched_stmt -> . IF LPAREN condition RPAREN SEMICOLON ELSE SEMICOLON
    (49) matched_stmt -> . IF LPAREN condition RPAREN SEMICOLON ELSE matched_stmt
    (50) matched_stmt -> . LCURVE stmt_list RCURVE
    (51) matched_stmt -> . expr
    (52) matched_stmt -> . return_stmt
    (53) matched_stmt -> . WHILE LPAREN condition RPAREN matched_stmt
    (54) matched_stmt -> . WHILE LPAREN condition RPAREN SEMICOLON
    (55) unmatched_stmt -> . IF LPAREN condition RPAREN stmt
    (56) unmatched_stmt -> . IF LPAREN condition RPAREN SEMICOLON
    (57) unmatched_stmt -> . IF LPAREN condition RPAREN matched_stmt ELSE unmatched_stmt
    (58) unmatched_stmt -> . IF LPAREN condition RPAREN SEMICOLON ELSE unmatched_stmt
    (59) unmatched_stmt -> . WHILE LPAREN condition RPAREN unmatched_stmt
    (67) expr -> . id EQUALS E1 SEMICOLON
    (68) expr -> . STAR left_side EQUALS E1 SEMICOLON
    (23) return_stmt -> . RETURN E1 SEMICOLON
    (24) return_stmt -> . RETURN SEMICOLON
    (89) id -> . IDENTIFIER

    RCURVE          reduce using rule 19 (fn_body -> .)
    IDENTIFIER      shift and go to state 37
    INT_VAR         shift and go to state 7
    FLOAT_VAR       shift and go to state 10
    IF              shift and go to state 46
    LCURVE          shift and go to state 33
    WHILE           shift and go to state 36
    STAR            shift and go to state 34
    RETURN          shift and go to state 30

    id                             shift and go to state 38
    type                           shift and go to state 40
    fn_call                        shift and go to state 41
    declaration                    shift and go to state 42
    matched_stmt                   shift and go to state 31
    fn_body                        shift and go to state 32
    return_stmt                    shift and go to state 44
    unmatched_stmt                 shift and go to state 35
    stmt                           shift and go to state 45
    expr                           shift and go to state 43
    fn_line                        shift and go to state 39

state 22

    (1) program -> basic_block program .

    $end            reduce using rule 1 (program -> basic_block program .)


state 23

    (39) declaration -> type list SEMICOLON .

    IDENTIFIER      reduce using rule 39 (declaration -> type list SEMICOLON .)
    INT_VAR         reduce using rule 39 (declaration -> type list SEMICOLON .)
    FLOAT_VAR       reduce using rule 39 (declaration -> type list SEMICOLON .)
    IF              reduce using rule 39 (declaration -> type list SEMICOLON .)
    LCURVE          reduce using rule 39 (declaration -> type list SEMICOLON .)
    WHILE           reduce using rule 39 (declaration -> type list SEMICOLON .)
    STAR            reduce using rule 39 (declaration -> type list SEMICOLON .)
    RETURN          reduce using rule 39 (declaration -> type list SEMICOLON .)
    RCURVE          reduce using rule 39 (declaration -> type list SEMICOLON .)
    VOID            reduce using rule 39 (declaration -> type list SEMICOLON .)
    $end            reduce using rule 39 (declaration -> type list SEMICOLON .)


state 24

    (40) list -> list COMMA . variable
    (42) variable -> . IDENTIFIER
    (43) variable -> . STAR variable

    IDENTIFIER      shift and go to state 14
    STAR            shift and go to state 48

    variable                       shift and go to state 47

state 25

    (16) star -> STAR star .

    MAIN            reduce using rule 16 (star -> STAR star .)
    COMMA           reduce using rule 16 (star -> STAR star .)
    RPAREN          reduce using rule 16 (star -> STAR star .)


state 26

    (43) variable -> STAR variable .

    SEMICOLON       reduce using rule 43 (variable -> STAR variable .)
    COMMA           reduce using rule 43 (variable -> STAR variable .)
    LPAREN          reduce using rule 43 (variable -> STAR variable .)
    RPAREN          reduce using rule 43 (variable -> STAR variable .)


state 27

    (14) fn_name -> star MAIN .

    LPAREN          reduce using rule 14 (fn_name -> star MAIN .)


state 28

    (6) fn_declaration -> type fn_name LPAREN . dec_arg_list RPAREN SEMICOLON
    (7) fn_declaration -> type fn_name LPAREN . arg_list RPAREN SEMICOLON
    (11) fn_defn1 -> type fn_name LPAREN . arg_list RPAREN
    (32) dec_arg_list -> . type star dec_multiple_arg
    (35) arg_list -> . type variable multiple_arg
    (36) arg_list -> .
    (30) type -> . INT_VAR
    (31) type -> . FLOAT_VAR

    RPAREN          reduce using rule 36 (arg_list -> .)
    INT_VAR         shift and go to state 7
    FLOAT_VAR       shift and go to state 10

    type                           shift and go to state 49
    arg_list                       shift and go to state 50
    dec_arg_list                   shift and go to state 51

state 29

    (8) fn_declaration -> VOID fn_name LPAREN . dec_arg_list RPAREN SEMICOLON
    (9) fn_declaration -> VOID fn_name LPAREN . arg_list RPAREN SEMICOLON
    (12) fn_defn1 -> VOID fn_name LPAREN . arg_list RPAREN
    (32) dec_arg_list -> . type star dec_multiple_arg
    (35) arg_list -> . type variable multiple_arg
    (36) arg_list -> .
    (30) type -> . INT_VAR
    (31) type -> . FLOAT_VAR

    RPAREN          reduce using rule 36 (arg_list -> .)
    INT_VAR         shift and go to state 7
    FLOAT_VAR       shift and go to state 10

    type                           shift and go to state 49
    arg_list                       shift and go to state 52
    dec_arg_list                   shift and go to state 53

state 30

    (23) return_stmt -> RETURN . E1 SEMICOLON
    (24) return_stmt -> RETURN . SEMICOLON
    (71) E1 -> . E1 PLUS E2
    (72) E1 -> . E1 MINUS E2
    (73) E1 -> . E2
    (74) E2 -> . E2 STAR E3
    (75) E2 -> . E2 DIVIDE E3
    (76) E2 -> . E3
    (77) E3 -> . LPAREN E1 RPAREN
    (78) E3 -> . mixed_id
    (79) mixed_id -> . star_ampersand id
    (80) mixed_id -> . id
    (81) mixed_id -> . MINUS mixed_id
    (82) mixed_id -> . INT
    (83) mixed_id -> . FLOAT
    (84) mixed_id -> . fn_call
    (85) mixed_id -> . star_ampersand fn_call
    (86) star_ampersand -> . STAR star_ampersand
    (87) star_ampersand -> . STAR
    (88) star_ampersand -> . AMPERSAND
    (89) id -> . IDENTIFIER
    (25) fn_call -> . IDENTIFIER LPAREN fn_call_args RPAREN

    SEMICOLON       shift and go to state 60
    LPAREN          shift and go to state 61
    MINUS           shift and go to state 65
    INT             shift and go to state 64
    FLOAT           shift and go to state 54
    STAR            shift and go to state 62
    AMPERSAND       shift and go to state 67
    IDENTIFIER      shift and go to state 63

    E2                             shift and go to state 55
    fn_call                        shift and go to state 56
    mixed_id                       shift and go to state 68
    star_ampersand                 shift and go to state 66
    E3                             shift and go to state 57
    E1                             shift and go to state 59
    id                             shift and go to state 58

state 31

    (44) stmt -> matched_stmt .

    IF              reduce using rule 44 (stmt -> matched_stmt .)
    LCURVE          reduce using rule 44 (stmt -> matched_stmt .)
    WHILE           reduce using rule 44 (stmt -> matched_stmt .)
    STAR            reduce using rule 44 (stmt -> matched_stmt .)
    RETURN          reduce using rule 44 (stmt -> matched_stmt .)
    IDENTIFIER      reduce using rule 44 (stmt -> matched_stmt .)
    RCURVE          reduce using rule 44 (stmt -> matched_stmt .)
    INT_VAR         reduce using rule 44 (stmt -> matched_stmt .)
    FLOAT_VAR       reduce using rule 44 (stmt -> matched_stmt .)


state 32

    (13) fn_defn2 -> LCURVE fn_body . RCURVE

    RCURVE          shift and go to state 69


state 33

    (50) matched_stmt -> LCURVE . stmt_list RCURVE
    (60) stmt_list -> . stmt stmt_list
    (61) stmt_list -> . stmt
    (44) stmt -> . matched_stmt
    (45) stmt -> . unmatched_stmt
    (46) matched_stmt -> . IF LPAREN condition RPAREN matched_stmt ELSE matched_stmt
    (47) matched_stmt -> . IF LPAREN condition RPAREN matched_stmt ELSE SEMICOLON
    (48) matched_stmt -> . IF LPAREN condition RPAREN SEMICOLON ELSE SEMICOLON
    (49) matched_stmt -> . IF LPAREN condition RPAREN SEMICOLON ELSE matched_stmt
    (50) matched_stmt -> . LCURVE stmt_list RCURVE
    (51) matched_stmt -> . expr
    (52) matched_stmt -> . return_stmt
    (53) matched_stmt -> . WHILE LPAREN condition RPAREN matched_stmt
    (54) matched_stmt -> . WHILE LPAREN condition RPAREN SEMICOLON
    (55) unmatched_stmt -> . IF LPAREN condition RPAREN stmt
    (56) unmatched_stmt -> . IF LPAREN condition RPAREN SEMICOLON
    (57) unmatched_stmt -> . IF LPAREN condition RPAREN matched_stmt ELSE unmatched_stmt
    (58) unmatched_stmt -> . IF LPAREN condition RPAREN SEMICOLON ELSE unmatched_stmt
    (59) unmatched_stmt -> . WHILE LPAREN condition RPAREN unmatched_stmt
    (67) expr -> . id EQUALS E1 SEMICOLON
    (68) expr -> . STAR left_side EQUALS E1 SEMICOLON
    (23) return_stmt -> . RETURN E1 SEMICOLON
    (24) return_stmt -> . RETURN SEMICOLON
    (89) id -> . IDENTIFIER

    IF              shift and go to state 46
    LCURVE          shift and go to state 33
    WHILE           shift and go to state 36
    STAR            shift and go to state 34
    RETURN          shift and go to state 30
    IDENTIFIER      shift and go to state 70

    stmt                           shift and go to state 71
    stmt_list                      shift and go to state 72
    matched_stmt                   shift and go to state 31
    expr                           shift and go to state 43
    return_stmt                    shift and go to state 44
    unmatched_stmt                 shift and go to state 35
    id                             shift and go to state 38

state 34

    (68) expr -> STAR . left_side EQUALS E1 SEMICOLON
    (69) left_side -> . id
    (70) left_side -> . star_ampersand id
    (89) id -> . IDENTIFIER
    (86) star_ampersand -> . STAR star_ampersand
    (87) star_ampersand -> . STAR
    (88) star_ampersand -> . AMPERSAND

    IDENTIFIER      shift and go to state 70
    STAR            shift and go to state 62
    AMPERSAND       shift and go to state 67

    left_side                      shift and go to state 74
    id                             shift and go to state 75
    star_ampersand                 shift and go to state 73

state 35

    (45) stmt -> unmatched_stmt .

    IF              reduce using rule 45 (stmt -> unmatched_stmt .)
    LCURVE          reduce using rule 45 (stmt -> unmatched_stmt .)
    WHILE           reduce using rule 45 (stmt -> unmatched_stmt .)
    STAR            reduce using rule 45 (stmt -> unmatched_stmt .)
    RETURN          reduce using rule 45 (stmt -> unmatched_stmt .)
    IDENTIFIER      reduce using rule 45 (stmt -> unmatched_stmt .)
    RCURVE          reduce using rule 45 (stmt -> unmatched_stmt .)
    INT_VAR         reduce using rule 45 (stmt -> unmatched_stmt .)
    FLOAT_VAR       reduce using rule 45 (stmt -> unmatched_stmt .)


state 36

    (53) matched_stmt -> WHILE . LPAREN condition RPAREN matched_stmt
    (54) matched_stmt -> WHILE . LPAREN condition RPAREN SEMICOLON
    (59) unmatched_stmt -> WHILE . LPAREN condition RPAREN unmatched_stmt

    LPAREN          shift and go to state 76


state 37

    (25) fn_call -> IDENTIFIER . LPAREN fn_call_args RPAREN
    (89) id -> IDENTIFIER .

    LPAREN          shift and go to state 77
    EQUALS          reduce using rule 89 (id -> IDENTIFIER .)


state 38

    (67) expr -> id . EQUALS E1 SEMICOLON

    EQUALS          shift and go to state 78


state 39

    (18) fn_body -> fn_line . fn_body
    (18) fn_body -> . fn_line fn_body
    (19) fn_body -> .
    (20) fn_line -> . declaration
    (21) fn_line -> . stmt
    (22) fn_line -> . fn_call SEMICOLON
    (39) declaration -> . type list SEMICOLON
    (44) stmt -> . matched_stmt
    (45) stmt -> . unmatched_stmt
    (25) fn_call -> . IDENTIFIER LPAREN fn_call_args RPAREN
    (30) type -> . INT_VAR
    (31) type -> . FLOAT_VAR
    (46) matched_stmt -> . IF LPAREN condition RPAREN matched_stmt ELSE matched_stmt
    (47) matched_stmt -> . IF LPAREN condition RPAREN matched_stmt ELSE SEMICOLON
    (48) matched_stmt -> . IF LPAREN condition RPAREN SEMICOLON ELSE SEMICOLON
    (49) matched_stmt -> . IF LPAREN condition RPAREN SEMICOLON ELSE matched_stmt
    (50) matched_stmt -> . LCURVE stmt_list RCURVE
    (51) matched_stmt -> . expr
    (52) matched_stmt -> . return_stmt
    (53) matched_stmt -> . WHILE LPAREN condition RPAREN matched_stmt
    (54) matched_stmt -> . WHILE LPAREN condition RPAREN SEMICOLON
    (55) unmatched_stmt -> . IF LPAREN condition RPAREN stmt
    (56) unmatched_stmt -> . IF LPAREN condition RPAREN SEMICOLON
    (57) unmatched_stmt -> . IF LPAREN condition RPAREN matched_stmt ELSE unmatched_stmt
    (58) unmatched_stmt -> . IF LPAREN condition RPAREN SEMICOLON ELSE unmatched_stmt
    (59) unmatched_stmt -> . WHILE LPAREN condition RPAREN unmatched_stmt
    (67) expr -> . id EQUALS E1 SEMICOLON
    (68) expr -> . STAR left_side EQUALS E1 SEMICOLON
    (23) return_stmt -> . RETURN E1 SEMICOLON
    (24) return_stmt -> . RETURN SEMICOLON
    (89) id -> . IDENTIFIER

    RCURVE          reduce using rule 19 (fn_body -> .)
    IDENTIFIER      shift and go to state 37
    INT_VAR         shift and go to state 7
    FLOAT_VAR       shift and go to state 10
    IF              shift and go to state 46
    LCURVE          shift and go to state 33
    WHILE           shift and go to state 36
    STAR            shift and go to state 34
    RETURN          shift and go to state 30

    id                             shift and go to state 38
    type                           shift and go to state 40
    fn_call                        shift and go to state 41
    declaration                    shift and go to state 42
    matched_stmt                   shift and go to state 31
    fn_body                        shift and go to state 79
    return_stmt                    shift and go to state 44
    unmatched_stmt                 shift and go to state 35
    stmt                           shift and go to state 45
    expr                           shift and go to state 43
    fn_line                        shift and go to state 39

state 40

    (39) declaration -> type . list SEMICOLON
    (40) list -> . list COMMA variable
    (41) list -> . variable
    (42) variable -> . IDENTIFIER
    (43) variable -> . STAR variable

    IDENTIFIER      shift and go to state 14
    STAR            shift and go to state 48

    list                           shift and go to state 11
    variable                       shift and go to state 80

state 41

    (22) fn_line -> fn_call . SEMICOLON

    SEMICOLON       shift and go to state 81


state 42

    (20) fn_line -> declaration .

    IDENTIFIER      reduce using rule 20 (fn_line -> declaration .)
    INT_VAR         reduce using rule 20 (fn_line -> declaration .)
    FLOAT_VAR       reduce using rule 20 (fn_line -> declaration .)
    IF              reduce using rule 20 (fn_line -> declaration .)
    LCURVE          reduce using rule 20 (fn_line -> declaration .)
    WHILE           reduce using rule 20 (fn_line -> declaration .)
    STAR            reduce using rule 20 (fn_line -> declaration .)
    RETURN          reduce using rule 20 (fn_line -> declaration .)
    RCURVE          reduce using rule 20 (fn_line -> declaration .)


state 43

    (51) matched_stmt -> expr .
